service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mani-manip
spec:
  selector:
    app: mani-manip
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
